--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>std</title>
+  <title>Background Slider</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="#">
 </head>
 
 <body>
+  <dib class="slider-container">
+    <div class="slide active" style="background-image: url(images/domi01.jpg)"></div>
+  </dib>
+
+  <dib class="slider-container">
+    <div class="slide " style="background-image: url(images/domi02.jpg)"></div>
+  </dib>
+
+  <dib class="slider-container">
+    <div class="slide " style="background-image: url(images/domi03.jpg)"></div>
+  </dib>
+
+  <dib class="slider-container">
+    <div class="slide " style="background-image: url(images/domi04.jpg)"></div>
+  </dib>
+
+  <dib class="slider-container">
+    <div class="slide " style="background-image: url(images/domi05.jpg)"></div>
+  </dib>
+
   <script src="script.js"></script>
 </body>
 
