--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Background Slider</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="#">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
@@ -30,6 +31,14 @@
   <dib class="slider-container">
     <div class="slide " style="background-image: url(images/domi05.jpg)"></div>
   </dib>
+
+  <button class="arrow left-arrow" id="left">
+    <i class="fas fa-arrow-left"></i>
+  </button>
+
+  <button class="arrow right-arrow" id="right">
+    <i class="fas fa-arrow-right"></i>
+  </button>
 
   <script src="script.js"></script>
 </body>
