--- a/index.html
+++ b/index.html
@@ -12,25 +12,17 @@
 </head>
 
 <body>
-  <dib class="slider-container">
+  <div class="slider-container">
     <div class="slide active" style="background-image: url(images/domi01.jpg)"></div>
-  </dib>
 
-  <dib class="slider-container">
     <div class="slide " style="background-image: url(images/domi02.jpg)"></div>
-  </dib>
 
-  <dib class="slider-container">
-    <div class="slide " style="background-image: url(images/domi03.jpg)"></div>
-  </dib>
+    <div class="slide" style="background-image: url(images/domi03.jpg)"></div>
 
-  <dib class="slider-container">
-    <div class="slide " style="background-image: url(images/domi04.jpg)"></div>
-  </dib>
+    <div class="slide" style="background-image: url(images/domi04.jpg)"></div>
 
-  <dib class="slider-container">
-    <div class="slide " style="background-image: url(images/domi05.jpg)"></div>
-  </dib>
+    <div class="slide" style="background-image: url(images/domi05.jpg)"></div>
+  </div>
 
   <button class="arrow left-arrow" id="left">
     <i class="fas fa-arrow-left"></i>
